refactor: use sparse vector for memory
