# docs/swagger.json
@@ -126,11 +126,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer",
-                                "format": "int32"
-                            }
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -818,12 +814,6 @@
                 ],
                 "summary": "List memories",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Agent ID",
-                        "name": "agent_id",
-                        "in": "query"
-                    },
                     {
                         "type": "string",
                         "description": "Run ID",
@@ -3052,8 +3042,8 @@
         "handlers.memoryAddPayload": {
             "type": "object",
             "properties": {
-                "agent_id": {
-                    "type": "string"
+                "embedding_enabled": {
+                    "type": "boolean"
                 },
                 "filters": {
                     "type": "object",
@@ -3083,9 +3073,6 @@
         "handlers.memoryDeleteAllPayload": {
             "type": "object",
             "properties": {
-                "agent_id": {
-                    "type": "string"
-                },
                 "run_id": {
                     "type": "string"
                 }
@@ -3094,9 +3081,6 @@
         "handlers.memoryEmbedUpsertPayload": {
             "type": "object",
             "properties": {
-                "agent_id": {
-                    "type": "string"
-                },
                 "filters": {
                     "type": "object",
                     "additionalProperties": true
@@ -3128,8 +3112,8 @@
         "handlers.memorySearchPayload": {
             "type": "object",
             "properties": {
-                "agent_id": {
-                    "type": "string"
+                "embedding_enabled": {
+                    "type": "boolean"
                 },
                 "filters": {
                     "type": "object",
@@ -3258,9 +3242,6 @@
         "memory.MemoryItem": {
             "type": "object",
             "properties": {
-                "agentId": {
-                    "type": "string"
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -3320,6 +3301,9 @@
         "memory.UpdateRequest": {
             "type": "object",
             "properties": {
+                "embedding_enabled": {
+                    "type": "boolean"
+                },
                 "memory": {
                     "type": "string"
                 },
